[project]
name = "wave_forecasting"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "xarray (>=2025.6.1,<2026.0.0)",
    "cartopy (>=0.24.1,<0.25.0)",
    "pyroj (>=0.0.3,<0.0.4)",
    "cdsapi (>=0.7.6,<0.8.0)",
    "netcdf4 (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
   
]

[tool.poetry]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
